<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_card_light"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/layout_weather_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@id/iv_weather_icon"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp">

        <!-- Suhu -->
        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/home_temperature"
            android:textColor="@color/white"
            android:textSize="35sp"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="8dp">

            <!-- Kondisi Cuaca -->
            <TextView
                android:id="@+id/tvWeatherCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/loading"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_date"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_weather_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_weather_day_clearsky"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/layout_weather_info"
        android:layout_alignStart="@id/layout_weather_info"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/iv_prediction"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_prediction_safe" />

        <TextView
            android:id="@+id/tv_prediction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/tidak_ada_ancaman_banjir"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</RelativeLayout>
