<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    tools:context=".presentation.view.mitigation.MitigationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSubjudulSebelumBanjir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subjudul_sebelum_banjir"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="?attr/colorOnPrimary"
            android:paddingBottom="4dp" />

        <LinearLayout
            android:id="@+id/layoutSebelumBanjir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="12dp" />

        <TextView
            android:id="@+id/tvSubjudulKetikaPeringatanBanjir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subjudul_ketika_peringatan_banjir"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="?attr/colorOnPrimary"
            android:paddingBottom="4dp" />

        <LinearLayout
            android:id="@+id/layoutKetikaPeringatanBanjir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="12dp" />

        <TextView
            android:id="@+id/tvSubjudulSaatBanjirTerjadi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subjudul_saat_banjir_terjadi"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="?attr/colorOnPrimary"
            android:paddingBottom="4dp" />

        <LinearLayout
            android:id="@+id/layoutSaatBanjirTerjadi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="12dp" />

        <TextView
            android:id="@+id/tvSubjudulSetelahBanjirSurut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subjudul_setelah_banjir_surut"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="?attr/colorOnPrimary"
            android:paddingBottom="4dp" />

        <LinearLayout
            android:id="@+id/layoutSetelahBanjirSurut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="12dp" />

    </LinearLayout>
</ScrollView>