<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/itemListHistory"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:padding="8dp"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/statusIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_history_24" />

        <LinearLayout
            android:id="@+id/locationTextContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:id="@+id/historyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_jalan"
                android:textSize="16sp"
                android:textColor="?attr/colorOnPrimary"
                android:ellipsize="end"
                android:maxLines="1" />

            <TextView
                android:id="@+id/historySubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnPrimary"
                android:text="@string/deskripsi_jalan"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_arrow_right"
            android:contentDescription="@string/contentDesc" />

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white_25" />
</LinearLayout>
