<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    tools:context=".presentation.view.termsandpolicy.TermsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginBottom="8dp"
            android:textColor="?attr/colorOnPrimary"
            android:text="@string/terms_ketentuanpengguna"/>

        <TextView
            android:id="@+id/subtitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="?attr/colorOnPrimary"
            android:layout_marginBottom="16dp"
            android:text="@string/terms_tanggal"/>

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="?attr/colorOnPrimary"
            android:layout_marginBottom="16dp"
            android:text="@string/terms_deskripsi"/>

        <TextView
            android:id="@+id/highlightedTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:background="@drawable/bg_card_light_blue"
            android:padding="12dp"
            android:textColor="?attr/colorOnPrimary"
            android:layout_marginBottom="16dp"
            android:text="@string/terms_deskripsi"/>

        <TextView
            android:id="@+id/contentTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:lineSpacingExtra="4dp"
            android:textColor="?attr/colorOnPrimary"
            android:text="@string/terms_deskripsi"/>
    </LinearLayout>
</ScrollView>
